<resources>
    <string name="app_name">FreeMovies.com</string>
    <string name="movieTitle">Movie Title</string>
    <string name="movieGenre">Genre</string>
    <string name="movieYear">Year</string>
    <string name="rating">Rating</string>
    <string name="insert">Insert</string>
    <string name="showList">Show List</string>
    <string-array name="genre">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="pg13">Show All Movies rated PG13</string>
    <string name="movieId">Movie ID</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>