<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_2"
    android:backgroundTint="#31E3E3E3"
    android:backgroundTintMode="src_over"
    tools:context=".EditMovies">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="Edit Movies"
        android:textSize="55dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movieId"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/movieID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movieTitle"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter Movie Title"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movieGenre"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/movieGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter Genre"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movieYear"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/movieYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter Year of Release"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/genre"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

    </LinearLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>