<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_2"
    android:backgroundTint="#31E3E3E3"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="My Movies"
        android:textSize="55dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/movieTitle"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:hint="Enter Movie Title"
        android:textColorHint="@color/white"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/movieGenre"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/movieGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter Movie Genre"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movieYear"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/movieYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter Year of release"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/genre"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cinematiclanguage"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/InsertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/cinematiclanguage"
            android:textSize="20dp"
            android:text="@string/insert" />

        <Button
            android:id="@+id/ShowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/cinematiclanguage"
            android:textSize="20dp"
            android:text="@string/showList" />
    </LinearLayout>
</LinearLayout>